Тестирую публикацию постов в блог.

--- a/gfsblog/about.qmd
+++ b/gfsblog/about.qmd
@@ -1,5 +1,5 @@
 ---
-title: "About"
+title: "О блоге"
 image: profile.jpg
 about:
   template: jolla
@@ -10,4 +10,6 @@ about:
 
 ---
 
-В блоге публикуются текущие результаты работы по проекту АИГС ГраФиС-Тактик
+Автор блога много лет занимается вопросами автоматизации проведения пожарно-тактических расчетов и автоматизации деятельности пожарно-спасательных подразделений МЧС России.
+
+В данном блоге он публикует текущие результаты работы по проекту АИГС ГраФиС-Тактик, различные нюансы разработки проекта, полезные мелочи в работе, а также изредка свои мысли о будущем пожарной охраны.
