--- a/gfsblog/posts/welcome/index.qmd
+++ b/gfsblog/posts/welcome/index.qmd
@@ -1,12 +1,14 @@
 ---
-title: "Welcome To My Blog"
-author: "Tristan O'Malley"
+title: "Добро пожаловать в блог"
+author: "Малютин О.С."
 date: "2022-05-14"
-categories: [news]
+categories: [общие]
 ---
 
-This is the first post in a Quarto blog. Welcome!
+Здравствуйте уважаемые пользователи АИГС ГраФиС-Тактик.
 
 ![](thumbnail.jpg)
 
-Since this post doesn't specify an explicit `image`, the first image in the post will be used in the listing page of posts.
+Технологии все время совершенствуются и мы стараемся оценить применимость тех или иных новинок для того чтобы максимально просто и наглядно рассказывать вам о последних новостях и нововведениях в системе [ГраФиС-Тактик](https://www.graphicalfiresets.ru).
+
+В этом блоге я, а возможно и мои коллеги, будем выкладывать новости, краткие сведения о ходе работы над проектом ГраФиС-Тактик, и прочую полезную информацию, которую по тем или иным причинам нет возможности публиковать в ином формате. Добро пожаловать и оставайтессь с нами!
