--- a/gfsblog/posts/formula-renum/index.qmd
+++ b/gfsblog/posts/formula-renum/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Ренумерация формул"
 author: "Малютин О.С."
-date: "2022-05-17"
+date: "2022-05-18"
 categories: [расчеты,формулы]
 image: "6.jpg"
 ---
@@ -16,3 +16,25 @@ image: "6.jpg"
 
 ![Инструмент "Ренумерация" панели инструментов "Формулы"](2.jpg)
 
+В появившемся окне (рис. 3) имеются два поля:
+
+1. Поле "Префикс" предназначено для указания некоторого произвольного текста который будет добавлен перед номером. Например, номер главы в рамках которой следует произвести ренумерацию
+2. Поле "Начать с" Позволяет указать номер с формулы с которого следует начать нумерацию.
+
+![Окно "Параметры ренумерации"](3.jpg)    
+
+Если ничего не менять в окне параметров ренумерации, то результат присвоения новых номеров фигурам формул будет таким как показано на рисунке 4, т.е. все имеющиеся на рабочем листе документа формулы будут перенумерованы в том порядке в котром они расположены на листе сверху вниз.
+
+![Результат ренумерации всех формул на рабочем листе без префикса](4.jpg)
+
+Однако зачастую может возникнуть необходимость ренумерации не всех формул, а лишь части из них. В этом случае, прежде чем воспользоваться командой "Ренумерация" следует выбрать фигуры необходимых формул воспользовавшись кнопкой `cntrl` и правой кнопкой мыши. В результате будут ренумерованы только те фигуры которые были выбраны. При этом порядок их нумерации будет тем же в котором они добавлялись в выделение.
+
+На рисунке 5 представлен результат произвольной ренумерации с использованием префиксов.
+
+![Результат произвольной ренумерации с использованием префиксов](5.jpg)
+
+В данном случае изначально были выбраны фигуры 1 и 2. К ним была применена простая ренумеарция начиная с единицы. Затем были выбраны фигуры 2 и 3 - для них была применена ренумерация с префиксом "1.". Для фигуры 5 был добавлен номер формулы с префиксом "2.".
+
+На рисунке 6 показан итоговый текст расчета с учетом ренумерации. 
+
+![Итоговый текст расчета с учетом ренумерации](6.jpg)
