Дополнительно добавил номер версии ГраФиС

--- a/gfsblog/posts/formula-renum/index.qmd
+++ b/gfsblog/posts/formula-renum/index.qmd
@@ -6,6 +6,8 @@ categories: [расчеты,формулы]
 image: "6.jpg"
 ---
 
+`начиная с ГраФиС-Тактик 13.0.02`
+
 При составлении расчетов состоящих из многих фигур формул может возникать задача их ренумерации, т.е. присвоения им определенного порядкового номера.
 
 ![](1.jpg)
