--- a/formulas/advanced/renumeration.qmd
+++ b/formulas/advanced/renumeration.qmd
@@ -1,1 +1,34 @@
-## Ренумерация формул
+## Ренумерация фигур формул
+
+При составлении расчетов состоящих из многих фигур формул может возникать задача их ренумерации, т.е. присвоения им определенного порядкового номера.
+
+![Рисуонк 1 - Расчет без нумерованных формул](src/1.jpg)
+
+Например, мы хотим присвоить определенные порядковые номера формулам показанным на рисунке 1. Сделать это можно в ручную, однако, в случае, если у вас имеется множество формул, процесс присвоения порядковых номеров может потребовать значительного времени. Кроме того, в случае если вам понадобится удалить или добавить какую-то формулу, то это нарушит их порядковую нумерацию и приведет к необходимости повторной ренумерации.
+
+Для того, чтобы облегчить эту задачу можно воспользоваться инструментом "Ренумерация" на панели инстурментов "Формулы" (рис. 2)
+
+![Рисуонк 2 - Инструмент "Ренумерация" панели инструментов "Формулы"](src/2.jpg)
+
+В появившемся окне (рис. 3) имеются два поля:
+
+1. Поле "Префикс" предназначено для указания некоторого произвольного текста который будет добавлен перед номером. Например, номер главы в рамках которой следует произвести ренумерацию
+2. Поле "Начать с" Позволяет указать номер с формулы с которого следует начать нумерацию.
+
+![Рисуонк 3 - Окно "Параметры ренумерации"](src/3.jpg)    
+
+Если ничего не менять в окне параметров ренумерации, то результат присвоения новых номеров фигурам формул будет таким как показано на рисунке 4, т.е. все имеющиеся на рабочем листе документа формулы будут перенумерованы в том порядке в котром они расположены на листе сверху вниз.
+
+![Рисуонк 4 - Результат ренумерации всех формул на рабочем листе без префикса](src/4.jpg)
+
+Однако зачастую может возникнуть необходимость ренумерации не всех формул, а лишь части из них. В этом случае, прежде чем воспользоваться командой "Ренумерация" следует выбрать фигуры необходимых формул воспользовавшись кнопкой `cntrl` и правой кнопкой мыши. В результате будут ренумерованы только те фигуры которые были выбраны. При этом порядок их нумерации будет тем же в котором они добавлялись в выделение.
+
+На рисунке 5 представлен результат произвольной ренумерации с использованием префиксов.
+
+![Рисуонк 5 - Результат произвольной ренумерации с использованием префиксов](src/5.jpg)
+
+В данном случае изначально были выбраны фигуры 1 и 2. К ним была применена простая ренумеарция начиная с единицы. Затем были выбраны фигуры 2 и 3 - для них была применена ренумерация с префиксом "1.". Для фигуры 5 был добавлен номер формулы с префиксом "2.".
+
+На рисунке 6 показан итоговый текст расчета с учетом ренумерации. 
+
+![Рисуонк 6 - Итоговый текст расчета с учетом ренумерации](src/6.jpg)
