Исправил ошибку в заголовке

--- a/gfsblog/posts/timeline-basix/index.qmd
+++ b/gfsblog/posts/timeline-basix/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Таймлан модели боевых действий"
+title: "Таймлайн модели боевых действий"
 author: "Малютин О.С."
 date: "2022-05-24"
 categories: [анализ]
