Добавил мануал на HTML разметку

--- a/formulas/html/main-code.qmd
+++ b/formulas/html/main-code.qmd
@@ -1,1 +1,17 @@
 ## Основы написания HTML кода текста фигур формул
+
+Фигуры формул написаны на языке разметки "HTML" и для их редактирования и создания используется набор базовых тегов.
+
+>1. Базовые теги для редактирования и создания фигур формул:
+
+![Рисунок 1.](Picture/2.jpg)
+
+Каждый тег имеет окончание "/", это нужно для того, чтобы определить продолжительность использования того или инного тега.
+
+Пример HTML кода фигуры формулы "Путь пройденный огнем", HTML код фигуры формулы открывается путем нажатия ПКМ по формуле и последующим нажатием на вкладку "Редактировать исходный код".
+
+![Рисунок 2.](Picture/6.jpg)
+
+![Рисунок 3.](Picture/1.jpg)
+
+По данному примеру можно написать большинство фигур формул.
