--- a/formulas/html/markers.qmd
+++ b/formulas/html/markers.qmd
@@ -1,1 +1,11 @@
 ## Вставка маркеров свойств фигур формул в текст
+
+Для выведения значений из таблицы данных фигуры, между двумя знаками "$" вставляется имя данных, которые необходимо вывести.
+
+![Рисунок 1.](Picture/3.jpg)
+
+Затем нажимаем на кнопку "HTML", для просмотра итогового вида фигуры формулы и изменений которые мы внесли.
+
+![Рисунок 2.](Picture/4.jpg)
+
+![Рисунок 3.](Picture/5.jpg)
