--- a/formulas/shapes/add-props.qmd
+++ b/formulas/shapes/add-props.qmd
@@ -1,1 +1,31 @@
 ## Добавление свойств фигуры формулы
+
+>1. Открываем таблицу свойств фигуры (Окно > Показать таблицу свойств фигуры).
+
+![Рисунок 1.](Picture/6.jpg)
+
+>2. В открытой таблице внаходим следующие столбцы:
+
+>>Shape data - Имя данных
+
+>>Label - Подпись данных
+
+>>Prompt - Сообщение необходимое при пояснении данных
+
+>>Type - Тип данных (значение зависит от типа данных, который мы выбрали в таблице данных фигуры)
+
+>>Format - Формат данных (Область значений)
+
+>>Value - значение данных
+
+>>Invisible - Отвечает за отображение данных в таблице данных фигуры
+
+![Рисунок 2.](Picture/7.jpg)
+
+>3. Формат данных (область значений) вводится последовательно через ";"
+
+![Рисунок 3.](Picture/8.jpg)
+
+>4. При вводе значения данных имеется возможность вставить формулу расчета путем прописывания имен данных и математических действий между ними
+
+![Рисунок 4.](Picture/9.jpg)
