--- a/formulas/shapes/new-shape.qmd
+++ b/formulas/shapes/new-shape.qmd
@@ -1,1 +1,23 @@
 ## Создание новой фигуры формул
+
+>1. Создаем фигуру "Прямоугольник" произвольного размера (Главная > Средства рисования > Прямоугольник).
+
+![Рисунок 1.](Picture/1.jpg)
+
+>2. Открываем таблицу данных фигуры (Нажатие правой кнопкой мыши по фигуре > Данные > Данные фигуры).
+
+![Рисунок 2.](Picture/2.jpg)
+
+>3. Определяем данные фигуры (Нажатие правой кнопкой мыши по кнопке "Определить" ).
+
+![Рисунок 3.](Picture/3.jpg)
+
+>>3.1. В появившейся вкладке появляется возможность добавить одну строку данных. 
+
+>>3.2. Выбираем подпись исходя из вида данных. Подпись делается на русском языке и будет отображаться в таблице данных фигуры
+
+>>3.3. Выбираем формат данных (область значений), тип данных которые мы будем использовать, необходимое значение и сообщение необходимое при пояснении данных.
+
+![Рисунок 4.](Picture/4.jpg)
+
+>>3.4. Нажимаем кнопку "Создать" и создаем необходимое количество данных.
