--- a/formulas/shapes/add-calculations.qmd
+++ b/formulas/shapes/add-calculations.qmd
@@ -1,3 +1,27 @@
 ## Разработка логики расчета 
 
-(формулы Visio)
+Разработка логики расчета имеет ввиду взаимосвязь данных, а значит имена данных должны быть идентичными во всех формулах.
+
+Приведем конкретный пример расчета пути пройденного огнем.
+
+>1. Переносим необходимые фигуры формул из блока основных расчетов на рабочее окно
+
+![Рисунок 1.](Picture/10.jpg)
+
+>2. Выбираем на панели инструментов инструмент "соединительная линия" и соединяем две фигуры формул между собой
+
+Примечание: После использования соеденительной линии нужно не забывать выбрать инструмент "Указатель", который находится рядом с инструментом
+
+![Рисунок 2.](Picture/11.jpg)
+
+>3. Связываем два параметра. В левом столбце находятся параметры из которых мы будем брать данные, а в правом столбце параметры, которым мы хотим передать эти данные.
+
+Примечание: Для удобства рекомендуется называть связываемые параметры идентичными наименованиями, но в данном примере мы руководствуемся логикой расчета и приравниваем расчетное время введения сил и средств, к времени свободного развития пожара.
+
+![Рисунок 3.](Picture/12.jpg)
+
+>4. Необходимо обновить обе формулы для произведения расчета и переноса данных.
+
+![Рисунок 4.](Picture/13.jpg)
+
+Таким образом связывая одну формулу с другой, имеется возможность построения полного расчета сил и средств.
