--- a/formulas/reports/rules.qmd
+++ b/formulas/reports/rules.qmd
@@ -1,1 +1,3 @@
 ## Правила расположения фигур
+
+Фигуры могут распологаться произвольно, но это затруднит работу с ними, поэтому рекомендуется вертикальное или горзионтальное последовательное построение по ходу логики расчета, что значительно упростит понимание и работу с ними.
