--- a/formulas/reports/save.qmd
+++ b/formulas/reports/save.qmd
@@ -1,1 +1,17 @@
 ## Сохранение созданных фигур формул и полных наборов расчетов в трафаретах
+
+После создания схемы из нескольких формул, для последующей работы с ней, понадобится сохранить её.
+
+>Для этого выделяем все формулы (При зажатой клавише Ctrl нажимаем правой кнопкой мыши на все фигуры и соеденительные линии в схеме)
+
+![Рисунок 1.](Picture/1.jpg)
+
+>Теперь нам необходимо объеденить все фигуры в одну систему, делается это путем группирования (После выделения всех фигур нажимаем правой кнопкой мыжи по одной из фигур в появившемся окне выбираем вкладку "Фигура", затем "Группировать")
+
+![Рисунок 2.](Picture/2.jpg)
+
+Появившуюся объединенную фигуру для её сохранения и последующего использования переносим в произвольный набор элементов
+
+![Рисунок 3.](Picture/3.jpg)
+
+Теперь мы сохранили фигуру и можем использовать её в дальнейшем в своих расчетах путем перемещения из набора элементов на рабочую панель. Рекомендуется переименовать фигуру для упрощения её дальнейшего поиска
