--- a/formulas/reports/use-saved.qmd
+++ b/formulas/reports/use-saved.qmd
@@ -1,1 +1,3 @@
 ## Использование сохраненных ранее фигур формул
+
+Использование ранее сохраненных фигур формул производится за счет переноса из списка фигур, который необходимо добавить (Если таковой отсутствует).
