--- a/formulas/shapes/add-props.qmd
+++ b/formulas/shapes/add-props.qmd
@@ -29,3 +29,21 @@
 >4. При вводе значения данных имеется возможность вставить формулу расчета путем прописывания имен данных и математических действий между ними
 
 ![Рисунок 4.](Picture/9.jpg)
+
+Также для последующего редактирования исходного кода необходимо произвести следующий порядок действий:
+
+>5) Нажать ПКМ по свободному пространству и выбрать в появившемся списке "Добавить раздел"
+
+![Рисунок 5.](Picture/15.jpg)
+
+>6) В данной табличке поставить галочку на против значения "Actions"
+
+![Рисунок 6.](Picture/16.jpg)
+
+>7) Заполнить раздел "Actions" в соответствии с примером, примечательно, что столбец "Action" должен быть заполнен в соответствии с рисунком 8.
+
+![Рисунок 7.](Picture/17.jpg)
+
+![Рисунок 8.](Picture/18.jpg)
+
+После произведения данных манипуляций мы сможем редактировать исходный код фигуры, что понадобится немного позже.
