--- a/formulas/reports/view.qmd
+++ b/formulas/reports/view.qmd
@@ -1,1 +1,10 @@
 ## Просмотр итогового полного расчета
+После провдения расчета может появиться необходимость преобразования данных в текстовый документ.
+Соответственно после проведения ренумерации, необходимо нажать на кнопку "Показать все вычисления в одном окне", которая располагается на боковой панели и отражена на рисунке 1.
+
+![Рисунок 1 - Показать все вычисления в одном окне](Picture/4.jpg)
+
+Теперь необходимо выделить весь текст, а затем скопировать его в текстовый редактор.
+Результаты отражены на рисунке 2. В качестве текстового редактора используется MS Word.
+
+![Рисунок 2 - Результаты в MS Word](Picture/5.jpg)
