--- a/formulas/shapes/add-props.qmd
+++ b/formulas/shapes/add-props.qmd
@@ -1,49 +1,55 @@
-## Добавление свойств фигуры формулы
+## Определение свойств фигуры формулы
+После создания фигуры формулы и добавления ее свойств, необходимо провести работу по определению этих свойств и корректировке данных.
 
->1. Открываем таблицу свойств фигуры (Окно > Показать таблицу свойств фигуры).
+Для осуществления данных действий предлагается следующий алгоритм:
 
-![Рисунок 1.](Picture/6.jpg)
+>1. Открываем таблицу свойств фигуры (Окно > Показать таблицу свойств фигуры)(рис. 1).
 
->2. В открытой таблице внаходим следующие столбцы:
+![Рисунок 1 - Алгоритм отркытия таблицы свойств фигуры формулы](Picture/6.jpg)
 
->>Shape data - Имя данных
+>2. В открытой таблице находим следующие столбцы:
 
->>Label - Подпись данных
+Shape data - Имя данных
 
->>Prompt - Сообщение необходимое при пояснении данных
+Label - Подпись данных
 
->>Type - Тип данных (значение зависит от типа данных, который мы выбрали в таблице данных фигуры)
+Prompt - Сообщение необходимое при пояснении данных
 
->>Format - Формат данных (Область значений)
+Type - Тип данных (значение зависит от типа данных, который мы выбрали в таблице данных фигуры)
 
->>Value - значение данных
+Format - Формат данных (Область значений)
 
->>Invisible - Отвечает за отображение данных в таблице данных фигуры
+Value - значение данных
 
-![Рисунок 2.](Picture/7.jpg)
+Invisible - Отвечает за отображение данных в таблице данных фигуры
 
->3. Формат данных (область значений) вводится последовательно через ";"
+Данные параметры свойств фигуры заполняются в соответствии с надобностью (рис. 2).
+Также сами свойства фигуры при необходимости возможно переименовать.
 
-![Рисунок 3.](Picture/8.jpg)
+![Рисунок 2 - Свойства фигуры формулы](Picture/7.jpg)
 
->4. При вводе значения данных имеется возможность вставить формулу расчета путем прописывания имен данных и математических действий между ними
+>3. Формат данных (область значений) вводится последовательно через ";", необходима при вариации значений в свойстве (рис. 3)
 
-![Рисунок 4.](Picture/9.jpg)
+![Рисунок 3 - Параметры свойств фигуры](Picture/8.jpg)
+
+>4. При вводе значения данных имеется возможность вставить формулу расчета путем прописывания имен данных и математических действий между ними (рис. 4)
+
+![Рисунок 4 - Пример интеграции математической формулы](Picture/9.jpg)
 
 Также для последующего редактирования исходного кода необходимо произвести следующий порядок действий:
 
->5) Нажать ПКМ по свободному пространству и выбрать в появившемся списке "Добавить раздел"
+>5 Нажать ПКМ по свободному пространству и выбрать в появившемся списке "Добавить раздел" (рис. 5)
 
-![Рисунок 5.](Picture/15.jpg)
+![Рисунок 5 - Добавить раздел](Picture/15.jpg)
 
->6) В данной табличке поставить галочку на против значения "Actions"
+>6 В данной табличке поставить галочку на против значения "Actions" (рис. 6)
 
-![Рисунок 6.](Picture/16.jpg)
+![Рисунок 6 - Вставка раздела](Picture/16.jpg)
 
->7) Заполнить раздел "Actions" в соответствии с примером, примечательно, что столбец "Action" должен быть заполнен в соответствии с рисунком 8.
+>7 Заполнить раздел "Actions" в соответствии с примером (рис. 7), примечательно, что столбец "Action" должен быть заполнен в соответствии с рисунком 8.
 
-![Рисунок 7.](Picture/17.jpg)
+![Рисунок 7 - Пример заполнения раздела "Actions"](Picture/17.jpg)
 
-![Рисунок 8.](Picture/18.jpg)
+![Рисунок 8 - ПРимер заполнения параметра "Action"](Picture/18.jpg)
 
 После произведения данных манипуляций мы сможем редактировать исходный код фигуры, что понадобится немного позже.
