--- a/formulas/shapes/new-shape.qmd
+++ b/formulas/shapes/new-shape.qmd
@@ -1,23 +1,26 @@
-## Создание новой фигуры формул
+## Создание новой фигуры формул и добавление свойств
+Данная работа нацелена на обучение пользователей работе с фигурами формул АИГС ГраФиС.
 
->1. Создаем фигуру "Прямоугольник" произвольного размера (Главная > Средства рисования > Прямоугольник).
+Ниже мы рассмотрим алгоритм по созданию новой фигуры формулы:
 
-![Рисунок 1.](Picture/1.jpg)
+>1. Создаем фигуру "Прямоугольник" произвольного размера (Главная > Средства рисования > Прямоугольник)(рис. 1).
 
->2. Открываем таблицу данных фигуры (Нажатие правой кнопкой мыши по фигуре > Данные > Данные фигуры).
+![Рисунок 1 - Средства рисования](Picture/1.jpg)
 
-![Рисунок 2.](Picture/2.jpg)
+>2. Открываем таблицу данных фигуры (Нажатие правой кнопкой мыши по фигуре > Данные > Данные фигуры)(рис. 2).
 
->3. Определяем данные фигуры (Нажатие правой кнопкой мыши по кнопке "Определить" ).
+![Рисунок 2 - Алгоритм открытия данных фигуры](Picture/2.jpg)
 
-![Рисунок 3.](Picture/3.jpg)
+>3. Определяем данные фигуры (Нажатие правой кнопкой мыши по кнопке "Определить")(рис. 3).
 
->>3.1. В появившейся вкладке появляется возможность добавить одну строку данных. 
+![Рисунок 3 - Данные фигуры](Picture/3.jpg)
+
+>>3.1. В появившейся вкладке появляется возможность добавить одну строку данных(Рис. 4). 
 
 >>3.2. Выбираем подпись исходя из вида данных. Подпись делается на русском языке и будет отображаться в таблице данных фигуры
 
 >>3.3. Выбираем формат данных (область значений), тип данных которые мы будем использовать, необходимое значение и сообщение необходимое при пояснении данных.
 
-![Рисунок 4.](Picture/4.jpg)
+![Рисунок 4 - Определение данных фигуры](Picture/4.jpg)
 
 >>3.4. Нажимаем кнопку "Создать" и создаем необходимое количество данных.
