--- a/formulas/html/main-code.qmd
+++ b/formulas/html/main-code.qmd
@@ -2,16 +2,16 @@
 
 Фигуры формул написаны на языке разметки "HTML" и для их редактирования и создания используется набор базовых тегов.
 
->1. Базовые теги для редактирования и создания фигур формул:
+>1. Базовые теги для редактирования и создания фигур формул показаны на рисунке 1
 
-![Рисунок 1.](Picture/2.jpg)
+![Рисунок 1 - Базовые теги](Picture/2.jpg)
 
 Каждый тег имеет окончание "/", это нужно для того, чтобы определить продолжительность использования того или инного тега.
 
-Пример HTML кода фигуры формулы "Путь пройденный огнем", HTML код фигуры формулы открывается путем нажатия ПКМ по формуле и последующим нажатием на вкладку "Редактировать исходный код".
+Пример HTML кода фигуры формулы "Путь пройденный огнем", HTML код фигуры формулы открывается путем нажатия ПКМ по формуле и последующим нажатием на вкладку "Редактировать исходный код" (рис. 3).
 
-![Рисунок 2.](Picture/6.jpg)
+![Рисунок 2 - Алгоритм просмотра исходного кода](Picture/6.jpg)
 
-![Рисунок 3.](Picture/1.jpg)
+![Рисунок 3 - Исходный код фигуры формулы](Picture/1.jpg)
 
-По данному примеру можно написать большинство фигур формул.
+По данному примеру (рис. 3) можно написать большинство фигур формул.
