--- a/formulas/reports/rules.qmd
+++ b/formulas/reports/rules.qmd
@@ -1,3 +1,7 @@
 ## Правила расположения фигур
 
 Фигуры могут распологаться произвольно, но это затруднит работу с ними, поэтому рекомендуется вертикальное или горзионтальное последовательное построение по ходу логики расчета, что значительно упростит понимание и работу с ними.
+
+Пример расположения фигур формул на рисунке 1:
+
+![Рисунок 1 - Пример расположения фигур формул](Picture/6.jpg)
