Доработки от Малютина

--- a/formulas/html/main-code.qmd
+++ b/formulas/html/main-code.qmd
@@ -6,6 +6,11 @@
 
 ![Рисунок 1 - Базовые теги](Picture/2.jpg)
 
+```{.html}
+<p></p> - Параграф
+...
+```
+
 Каждый тег имеет окончание "/", это нужно для того, чтобы определить продолжительность использования того или инного тега.
 
 Пример HTML кода фигуры формулы "Путь пройденный огнем", HTML код фигуры формулы открывается путем нажатия ПКМ по формуле и последующим нажатием на вкладку "Редактировать исходный код" (рис. 3).
