--- a/formulas/reports/use-saved.qmd
+++ b/formulas/reports/use-saved.qmd
@@ -1,3 +1,7 @@
 ## Использование сохраненных ранее фигур формул
 
 Использование ранее сохраненных фигур формул производится за счет переноса из списка фигур, который необходимо добавить (Если таковой отсутствует).
+
+:::{.callout-note}
+Дописать про то, что сгруппированные формулы после вбрасывания обратно на рабочий лист нужно разгруппировывать
+:::
