--- a/formulas/shapes/add-props.qmd
+++ b/formulas/shapes/add-props.qmd
@@ -1,4 +1,9 @@
 ## Определение свойств фигуры формулы
+
+> Здесь пишем как добавляются новые свойства фигуры
+
+
+
 После создания фигуры формулы и добавления ее свойств, необходимо провести работу по определению этих свойств и корректировке данных.
 
 Для осуществления данных действий предлагается следующий алгоритм:
