--- a/formulas/shapes/new-shape.qmd
+++ b/formulas/shapes/new-shape.qmd
@@ -1,4 +1,8 @@
-## Создание новой фигуры формул и добавление свойств
+## Создание новой фигуры формул
+
+> Показываем пример добавления фигуры из набора формул.
+
+
 Данная работа нацелена на обучение пользователей работе с фигурами формул АИГС ГраФиС.
 
 Ниже мы рассмотрим алгоритм по созданию новой фигуры формулы:
