Итоговые добавки от Семенова

--- a/formulas/html/main-code.qmd
+++ b/formulas/html/main-code.qmd
@@ -2,21 +2,27 @@
 
 Фигуры формул написаны на языке разметки "HTML" и для их редактирования и создания используется набор базовых тегов.
 
->1. Базовые теги для редактирования и создания фигур формул показаны на рисунке 1
-
-![Рисунок 1 - Базовые теги](Picture/2.jpg)
+>1. Базовые теги для редактирования и создания фигур формул:
 
 ```{.html}
-<p></p> - Параграф
-...
+<p></p> - Параграф;
+<b></b> - Полужирный шрифт;
+<align='center'> - Выравнивание по центру, может использоваться как дополнительный тег к тегу "Параграф";
+<sub></sub> - Надстрочный шрифт;
+<sup></sup> - Подстрочный шрифт.
 ```
 
+Тег состоит из двух частей, одна из которых открытвает область для изменений, а вторая закрывает. Соответственно если мы хотим провести те или инные операции над текстом, сам текст необходимо заключить в тег.
 Каждый тег имеет окончание "/", это нужно для того, чтобы определить продолжительность использования того или инного тега.
 
-Пример HTML кода фигуры формулы "Путь пройденный огнем", HTML код фигуры формулы открывается путем нажатия ПКМ по формуле и последующим нажатием на вкладку "Редактировать исходный код" (рис. 3).
+Пример HTML кода фигуры формулы "Путь пройденный огнем", HTML код фигуры формулы открывается путем нажатия ПКМ по формуле и последующим нажатием на вкладку "Редактировать исходный код" (рис. 2).
 
-![Рисунок 2 - Алгоритм просмотра исходного кода](Picture/6.jpg)
+![Рисунок 1 - Алгоритм просмотра исходного кода](Picture/6.jpg)
 
-![Рисунок 3 - Исходный код фигуры формулы](Picture/1.jpg)
+![Рисунок 2 - Исходный код фигуры формулы](Picture/1.jpg)
 
-По данному примеру (рис. 3) можно написать большинство фигур формул.
+По примеру приведенному на рисунке 2 можно написать большинство фигур формул.
+
+Примечательно, что все маркеры свойств фигуры необязательно прописывать в ручную, их можно вставлять в текст при помощи встроенного инструмента "Вставить маркер" показанного на рисунке 3.
+
+![Рисунок 3 - Инструмент для оперирования маркерами свойств фигуры](Picture/7.jpg)
