--- a/formulas/shapes/add-calculations.qmd
+++ b/formulas/shapes/add-calculations.qmd
@@ -1,4 +1,44 @@
 ## Разработка логики расчета 
 
-| Здесь пишем про формулы в ShapeSheet. Пара простых примеров формул. Ссылку на сайт с справкой по формулам. <https://shapesheet-kb.github.io/en/pages/Functions_by_category.htm>
+Разработка логики расчета заключается в построении расчета при помощи ShapeSheet (Встроенной таблицы свойств фигур), в котором можно реализовать математические формулы между данными тех или инных свойств.
+
+Для реализации разработки логики расчета необходим открыть таблицу свойств фигуры, для этого необходимо нажать ПКМ на ту фигуру, которую мы будем редактировать, а затем повторить алгоритм, который представлен на рисунке 1.
+
+![Рисунок 1 - Порядок открытия таблицы свойств фигуры](Picture/6.jpg)
+
+В полученном окне редактированию подлежит таблица "ShapeData"
+
+Далее мы арссмотрим все столбцы данной таблицы и за что они отвечают:
+
+Shape data - Имя данных
+
+Label - Подпись данных
+
+Prompt - Сообщение необходимое при пояснении данных
+
+Type - Тип данных (значение зависит от типа данных, который мы выбрали в таблице данных фигуры)
+
+Format - Формат данных (Область значений)
+
+Value - значение данных
+
+Invisible - Отвечает за отображение данных в таблице данных фигуры
+
+Данные параметры свойств фигуры заполняются в соответствии с надобностью (рис. 2).
+
+Также сами свойства фигуры при необходимости возможно переименовать.
+
+![Рисунок 2 - Свойства фигуры формулы](Picture/7.jpg)
+
+Формат данных (область значений) вводится последовательно через ";", необходима при вариации значений в свойстве (рис. 3)
+
+![Рисунок 3 - Параметры свойств фигуры](Picture/8.jpg)
+
+При вводе значения данных имеется возможность вставить формулу расчета путем прописывания имен данных и математических действий между ними (рис. 4)
+
+![Рисунок 4 - Пример интеграции математической формулы](Picture/9.jpg)
+
+Также существует множество математических действий приведенных в следующей ссылке:
+
+<https://shapesheet-kb.github.io/en/pages/Functions_by_category.htm>
 
