--- a/formulas/shapes/add-props.qmd
+++ b/formulas/shapes/add-props.qmd
@@ -1,60 +1,19 @@
 ## Определение свойств фигуры формулы
 
-> Здесь пишем как добавляются новые свойства фигуры
-
-
-
-После создания фигуры формулы и добавления ее свойств, необходимо провести работу по определению этих свойств и корректировке данных.
+После создания фигуры формулы, необходимо провести работу по определению свойств фигуры и их корректировке.
 
 Для осуществления данных действий предлагается следующий алгоритм:
 
->1. Открываем таблицу свойств фигуры (Окно > Показать таблицу свойств фигуры)(рис. 1).
+>1. Правой кнопкой мыши нажимаем на заготовку фигуры формулы и выбираем левой кнопкой мыши  вкладку "данные", а затем нажимаем "Данные фигуры" (рис. 1).
 
-![Рисунок 1 - Алгоритм отркытия таблицы свойств фигуры формулы](Picture/6.jpg)
+![Рисунок 1 - Алгоритм отркытия данных фигуры формулы](Picture/3.jpg)
 
->2. В открытой таблице находим следующие столбцы:
+>2. В полученном окне определяем название будущей формулы и левой кнопкой мыши нажимем на кнопку "Определить" (рис. 2).
 
-Shape data - Имя данных
+![Рисунок 2 - Открытие окна определения данных фигуры формулы](Picture/4.jpg)
 
-Label - Подпись данных
+>3. В появившемся окне путем нажатия кнопки "создать" добавляем все расчетные свойства, которые понадобятся для расчета создаваемой формулы, а также необходимо определить тип данных (например для времени свободного развития пожара это будет число), а также название свойства. (Например для расчета пути пройденного огнем, который развивался менее 10 минут, понадобятся следующие данные: 1. Время свободного развития пожара; 2. Линейная скорость распространения горения.) (рис. 3)
 
-Prompt - Сообщение необходимое при пояснении данных
+![Рисунок 3 - Определение свойств фигуры формулы](Picture/5.jpg)
 
-Type - Тип данных (значение зависит от типа данных, который мы выбрали в таблице данных фигуры)
-
-Format - Формат данных (Область значений)
-
-Value - значение данных
-
-Invisible - Отвечает за отображение данных в таблице данных фигуры
-
-Данные параметры свойств фигуры заполняются в соответствии с надобностью (рис. 2).
-Также сами свойства фигуры при необходимости возможно переименовать.
-
-![Рисунок 2 - Свойства фигуры формулы](Picture/7.jpg)
-
->3. Формат данных (область значений) вводится последовательно через ";", необходима при вариации значений в свойстве (рис. 3)
-
-![Рисунок 3 - Параметры свойств фигуры](Picture/8.jpg)
-
->4. При вводе значения данных имеется возможность вставить формулу расчета путем прописывания имен данных и математических действий между ними (рис. 4)
-
-![Рисунок 4 - Пример интеграции математической формулы](Picture/9.jpg)
-
-Также для последующего редактирования исходного кода необходимо произвести следующий порядок действий:
-
->5 Нажать ПКМ по свободному пространству и выбрать в появившемся списке "Добавить раздел" (рис. 5)
-
-![Рисунок 5 - Добавить раздел](Picture/15.jpg)
-
->6 В данной табличке поставить галочку на против значения "Actions" (рис. 6)
-
-![Рисунок 6 - Вставка раздела](Picture/16.jpg)
-
->7 Заполнить раздел "Actions" в соответствии с примером (рис. 7), примечательно, что столбец "Action" должен быть заполнен в соответствии с рисунком 8.
-
-![Рисунок 7 - Пример заполнения раздела "Actions"](Picture/17.jpg)
-
-![Рисунок 8 - ПРимер заполнения параметра "Action"](Picture/18.jpg)
-
-После произведения данных манипуляций мы сможем редактировать исходный код фигуры, что понадобится немного позже.
+Далее рассмотрим практическое применение свойств фигуры в расчетах.
