--- a/formulas/shapes/new-shape.qmd
+++ b/formulas/shapes/new-shape.qmd
@@ -1,30 +1,12 @@
 ## Создание новой фигуры формул
 
-> Показываем пример добавления фигуры из набора формул.
+Алгоритм добавления фигуры из набора формул:
 
+>1. Первым делом необходимо подключить набор фигур формул (рис. 1) под названием "Формулы", который отвечает за автоматизацию формул и несет в себе базовые примеры и элементы построения фигур формул.
 
-Данная работа нацелена на обучение пользователей работе с фигурами формул АИГС ГраФиС.
+![Рисунок 1 - Добавление набора фигур](Picture/1.jpg)
 
-Ниже мы рассмотрим алгоритм по созданию новой фигуры формулы:
+>2. Затем необходимо открыть добавленный набор фигур и перетащить на рабочий лист заготовку фигуры (рис. 2).
 
->1. Создаем фигуру "Прямоугольник" произвольного размера (Главная > Средства рисования > Прямоугольник)(рис. 1).
+![Рисунок 2 - Перенос заготовки фигуры на рабочий лист](Picture/2.jpg)
 
-![Рисунок 1 - Средства рисования](Picture/1.jpg)
-
->2. Открываем таблицу данных фигуры (Нажатие правой кнопкой мыши по фигуре > Данные > Данные фигуры)(рис. 2).
-
-![Рисунок 2 - Алгоритм открытия данных фигуры](Picture/2.jpg)
-
->3. Определяем данные фигуры (Нажатие правой кнопкой мыши по кнопке "Определить")(рис. 3).
-
-![Рисунок 3 - Данные фигуры](Picture/3.jpg)
-
->>3.1. В появившейся вкладке появляется возможность добавить одну строку данных(Рис. 4). 
-
->>3.2. Выбираем подпись исходя из вида данных. Подпись делается на русском языке и будет отображаться в таблице данных фигуры
-
->>3.3. Выбираем формат данных (область значений), тип данных которые мы будем использовать, необходимое значение и сообщение необходимое при пояснении данных.
-
-![Рисунок 4 - Определение данных фигуры](Picture/4.jpg)
-
->>3.4. Нажимаем кнопку "Создать" и создаем необходимое количество данных.
