--- a/formulas/reports/use-saved.qmd
+++ b/formulas/reports/use-saved.qmd
@@ -1,7 +1,3 @@
 ## Использование сохраненных ранее фигур формул
 
-Использование ранее сохраненных фигур формул производится за счет переноса из списка фигур, который необходимо добавить (Если таковой отсутствует).
-
-:::{.callout-note}
-Дописать про то, что сгруппированные формулы после вбрасывания обратно на рабочий лист нужно разгруппировывать
-:::
+Использование ранее сохраненных фигур формул производится за счет переноса из списка фигур, который необходимо добавить (Если таковой отсутствует). Следует обратить внимание на то, что после переноса сгруппированных фигур (напрмер связки нескольких формул), необходимо их разгруппировать.
