Доработка по маркерам от Семенова

--- a/formulas/html/markers.qmd
+++ b/formulas/html/markers.qmd
@@ -10,3 +10,7 @@
 ![Рисунок 2 - Выделение кнопки компиляции](Picture/4.jpg)
 
 ![Рисунок 3 - Просмотр изменений](Picture/5.jpg)
+
+Примечательно, что все маркеры свойств фигуры необязательно прописывать в ручную, их можно вставлять в текст при помощи встроенного инструмента "Вставить маркер" показанного на рисунке 3.
+
+![Рисунок 3 - Инструмент для оперирования маркерами свойств фигуры](Picture/7.jpg)
