Исправления по орфографии

--- a/formulas/advanced/renumeration.qmd
+++ b/formulas/advanced/renumeration.qmd
@@ -6,7 +6,7 @@
 
 Например, мы хотим присвоить определенные порядковые номера формулам показанным на рисунке 1. Сделать это можно в ручную, однако, в случае, если у вас имеется множество формул, процесс присвоения порядковых номеров может потребовать значительного времени. Кроме того, в случае если вам понадобится удалить или добавить какую-то формулу, то это нарушит их порядковую нумерацию и приведет к необходимости повторной ренумерации.
 
-Для того, чтобы облегчить эту задачу можно воспользоваться инструментом "Ренумерация" на панели инстурментов "Формулы" (рис. 2)
+Для того, чтобы облегчить эту задачу можно воспользоваться инструментом "Ренумерация" на панели инструментов "Формулы" (рис. 2)
 
 ![Рисунок 2 - Инструмент "Ренумерация" панели инструментов "Формулы"](src/2.jpg)
 
@@ -17,7 +17,7 @@
 
 ![Рисунок 3 - Окно "Параметры ренумерации"](src/3.jpg)    
 
-Если ничего не менять в окне параметров ренумерации, то результат присвоения новых номеров фигурам формул будет таким как показано на рисунке 4, т.е. все имеющиеся на рабочем листе документа формулы будут перенумерованы в том порядке в котром они расположены на листе сверху вниз.
+Если ничего не менять в окне параметров ренумерации, то результат присвоения новых номеров фигурам формул будет таким как показано на рисунке 4, т.е. все имеющиеся на рабочем листе документа формулы будут перенумерованы в том порядке в котором они расположены на листе сверху вниз.
 
 ![Рисунок 4 - Результат ренумерации всех формул на рабочем листе без префикса](src/4.jpg)
 
