--- a/formulas/html/main-code.qmd
+++ b/formulas/html/main-code.qmd
@@ -12,8 +12,8 @@
 <sup></sup> - Подстрочный шрифт.
 ```
 
-Тег состоит из двух частей, одна из которых открытвает область для изменений, а вторая закрывает. Соответственно если мы хотим провести те или инные операции над текстом, сам текст необходимо заключить в тег.
-Каждый тег имеет окончание "/", это нужно для того, чтобы определить продолжительность использования того или инного тега.
+Тег состоит из двух частей, одна из которых открывает область для изменений, а вторая закрывает. Соответственно если мы хотим провести те или иные операции над текстом, сам текст необходимо заключить в тег.
+Каждый тег имеет окончание "/", это нужно для того, чтобы определить продолжительность использования того или иного тега.
 
 Пример HTML кода фигуры формулы "Путь пройденный огнем", HTML код фигуры формулы открывается путем нажатия ПКМ по формуле и последующим нажатием на вкладку "Редактировать исходный код" (рис. 2).
 
