--- a/formulas/reports/save.qmd
+++ b/formulas/reports/save.qmd
@@ -2,11 +2,11 @@
 
 После создания схемы из нескольких формул, для последующей работы с ней, понадобится сохранить её.
 
->Для этого выделяем все формулы (При зажатой клавише Ctrl нажимаем правой кнопкой мыши на все фигуры и соеденительные линии в схеме)
+>Для этого выделяем все формулы (При зажатой клавише Ctrl нажимаем правой кнопкой мыши на все фигуры и соединительные линии в схеме)
 
 ![Рисунок 1.](Picture/1.jpg)
 
->Теперь нам необходимо объеденить все фигуры в одну систему, делается это путем группирования (После выделения всех фигур нажимаем правой кнопкой мыжи по одной из фигур в появившемся окне выбираем вкладку "Фигура", затем "Группировать")
+>Теперь нам необходимо объединить все фигуры в одну систему, делается это путем группирования (После выделения всех фигур нажимаем правой кнопкой мыжи по одной из фигур в появившемся окне выбираем вкладку "Фигура", затем "Группировать")
 
 ![Рисунок 2.](Picture/2.jpg)
 
