--- a/formulas/reports/view.qmd
+++ b/formulas/reports/view.qmd
@@ -1,5 +1,5 @@
 ## Просмотр итогового полного расчета
-После провдения расчета может появиться необходимость преобразования данных в текстовый документ.
+После проведения расчета может появиться необходимость преобразования данных в текстовый документ.
 Соответственно после проведения ренумерации, необходимо нажать на кнопку "Показать все вычисления в одном окне", которая располагается на боковой панели и отражена на рисунке 1.
 
 ![Рисунок 1 - Показать все вычисления в одном окне](Picture/4.jpg)
