--- a/formulas/shapes/add-calculations.qmd
+++ b/formulas/shapes/add-calculations.qmd
@@ -1,6 +1,6 @@
 ## Разработка логики расчета 
 
-Разработка логики расчета заключается в построении расчета при помощи ShapeSheet (Встроенной таблицы свойств фигур), в котором можно реализовать математические формулы между данными тех или инных свойств.
+Разработка логики расчета заключается в построении расчета при помощи ShapeSheet (Встроенной таблицы свойств фигур), в котором можно реализовать математические формулы между данными тех или иных свойств.
 
 Для реализации разработки логики расчета необходим открыть таблицу свойств фигуры, для этого необходимо нажать ПКМ на ту фигуру, которую мы будем редактировать, а затем повторить алгоритм, который представлен на рисунке 1.
 
@@ -8,7 +8,7 @@
 
 В полученном окне редактированию подлежит таблица "ShapeData"
 
-Далее мы арссмотрим все столбцы данной таблицы и за что они отвечают:
+Далее мы рассмотрим все столбцы данной таблицы и за что они отвечают:
 
 Shape data - Имя данных
 
