--- a/formulas/shapes/link_shapes.qmd
+++ b/formulas/shapes/link_shapes.qmd
@@ -10,7 +10,7 @@
 
 >2. Выбираем на панели инструментов инструмент "соединительная линия" и соединяем две фигуры формул между собой (рис. 2)
 
-Примечание: После использования соеденительной линии нужно не забывать выбрать инструмент "Указатель", который находится рядом с инструментом
+Примечание: После использования соединительной линии нужно не забывать выбрать инструмент "Указатель", который находится рядом с инструментом "Соеденительная линия"
 
 ![Рисунок 2 - Соединение двух фигур формул](Picture/11.jpg)
 
